Fixed side menu on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -253,7 +253,7 @@ header.top{
   }
 }
 
-.main{
+.main {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -768,7 +768,7 @@ section.content .gatsby-highlight + h4::before{
   }
 }
 
-.main {
+.inner1 {
   width: 100%;
   flex: 1 0 auto;
   position: relative;
@@ -776,7 +776,7 @@ section.content .gatsby-highlight + h4::before{
   -webkit-flex: 1 0 auto;
 }
 
-.main{
+.inner1 {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -798,6 +798,11 @@ section.content .gatsby-highlight + h4::before{
   -webkit-justify-content: flex-start;
   -webkit-box-align: stretch;
   -webkit-align-items: stretch;
+}
+
+.inner2 {
+  flex: 1 0 auto;
+  -webkit-flex: 1 0 auto;
 }
 
 .main article{
@@ -883,37 +888,37 @@ section.content .gatsby-highlight + h4::before{
   -webkit-align-items: baseline;
 }
 
-.sidebar .wrap-inner{
+.sidebar .sidebar-wrap-inner{
   margin-top: 60px;
 }
 
 @media (min-width: 0px) and (max-width: 599px) {
-  .sidebar .wrap-inner{
+  .sidebar .sidebar-wrap-inner{
       margin-top:40px;
   }
 }
 
 @media (min-width: 600px) and (max-width: 979px) {
-  .sidebar .wrap-inner{
+  .sidebar .sidebar-wrap-inner{
       margin-top:0;
   }
 }
 
 @media (min-width: 780px) and (max-width: 1279px) {
-  .sidebar .wrap-inner{
+  .sidebar .sidebar-wrap-inner{
       margin-top:50px;
   }
 }
 
 @media (min-width: 600px) {
-  .sidebar .wrap-inner{
+  .sidebar .sidebar-wrap-inner{
       transform:none !important;
       -webkit-transform: none !important;
   }
 }
 
 @media (max-width: 599px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       top:0;
       left: 0;
       bottom: 0;
@@ -929,7 +934,7 @@ section.content .gatsby-highlight + h4::before{
 }
 
 @media (min-width: 780px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       margin-right:-999px;
       padding-right: 999px;
       background-color: #f7f7f7;
@@ -937,7 +942,7 @@ section.content .gatsby-highlight + h4::before{
 }
 
 @media (min-width: 780px) and (max-width: 1999px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       position:fixed;
       z-index: 2;
       height: 100%;
@@ -945,7 +950,7 @@ section.content .gatsby-highlight + h4::before{
 }
 
 @media (min-width: 600px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       position:fixed;
       z-index: 2;
       height: calc(100vh - 60px);
@@ -959,19 +964,19 @@ section.content .gatsby-highlight + h4::before{
 }
 
 @media (min-width: 600px) and (max-width: 779px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       height:calc(100vh - 40px);
   }
 }
 
 @media (min-width: 780px) and (max-width: 1279px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       height:calc(100vh - 50px);
   }
 }
 
 @media (min-width: 2000px) {
-  .sidebar .wrap-outer{
+  .sidebar .sidebar-wrap-outer{
       border-left:1px solid #ececec;
   }
 }
@@ -1237,4 +1242,118 @@ section.content .gatsby-highlight + h4::before{
   .sidebar nav span.current {
     left: 15px;
   }
+}
+
+.css-yx40kw {
+  background-color: #20232a;
+  bottom: 44px;
+  color: #61dafb;
+  display: none;
+  cursor: pointer;
+  position: fixed;
+  right: 20px;
+  z-index: 3;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 599px) {
+  .css-yx40kw {
+    display:inline-block;
+  }
+}
+
+.css-tctv7l {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 780px) {
+  .css-tctv7l {
+    width:90%;
+  }
+}
+
+@media (min-width: 1340px) {
+  .css-tctv7l {
+    max-width:1260px;
+  }
+}
+
+.css-7ef8f8 {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 60px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+}
+
+@media (min-width: 780px) and (max-width: 1279px) {
+  .css-7ef8f8 {
+    height:50px;
+  }
+}
+
+@media (max-width: 599px) {
+  .css-7ef8f8 {
+    height:60px;
+    overflow: hidden;
+    align-items: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+  }
+}
+
+.css-1dgtft4 {
+  width: 20px;
+  height: 20px;
+  align-self: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  color: #61dafb;
+  -webkit-align-self: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+}
+
+.css-o1zbu3 {
+  transform: translate(2px, 4px);
+  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
+  -webkit-transform: translate(2px, 4px);
+  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
+  -moz-transition: transform 0.2s ease;
+}
+
+.css-sg9l1i {
+  transform: translate(2px, -4px) rotate(180deg);
+  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
+  -webkit-transform: translate(2px, -4px) rotate(180deg);
+  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
+  -moz-transition: transform 0.2s ease;
+}
+
+.css-12wnq5i {
+  transform: translate(2px, -8px);
+  transition: -webkit-transform 0.2s ease 0s, transform 0.2s ease 0s;
+}
+
+.css-cf8c4v {
+  transform: translate(2px, 8px) rotate(180deg);
+  transition: -webkit-transform 0.2s ease 0s, transform 0.2s ease 0s;
 }
